# Cross_domain

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs
dn/: Cargo.toml  build.rs
dn/src/: erasure_coding.rs  fuse_server.rs  main.rs  replication.rs  storage.rs
fuse/client/src/: main.rs
gmm/: Cargo.toml
gmm/src/: main.rs  metadata.rs
proto/: chuangshi.proto
rmn/: Cargo.toml
rmn/src/: main.rs  metadata.rs
scripts/: build.sh  down.sh  up.sh
sdk/: Cargo.toml  build.rs
sdk/src/: client.rs  lib.rs
tests/: integration_test.sh  test.sh
