[package]
name = "chuangshi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio-util = "0.7"
tokio-stream = "0.1"
indicatif = "0.17"
console = "0.15"
futures = "0.3"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
toml = "0.7"
sdk = { path = "../sdk" }
[build-dependencies]
tonic-build = "0.8"