[package]
name = "dn"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
fuser = "0.11"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-io = "0.1"
async-trait = "0.1"
tempfile = "3.0"
reed-solomon-erasure = "4.0"

[build-dependencies]
tonic-build = "0.8"