[package]
name = "rmn"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tokio-stream = "0.1"
bytes = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"